syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";

option java_multiple_files = true;
option java_package = "main_ms";

service MainService {

  rpc getUserDetails(UserByIdRequest) returns (UserResponse);
  rpc getUserHistory(UserByIdRequest) returns (UserHistoryResponse);
  rpc checkUserLogin(LoginRequest) returns (UserResponse);
  rpc createUser(CreateUserRequest) returns (UserResponse);
  rpc getBidDetails(BidByIdRequest) returns(BidResponse);
  rpc getBidHistory(BidByIdRequest) returns (BidHistoryResponse);
  rpc createBid(CreateBidRequest) returns(BoolResponse);
  rpc getAllBidDetails(google.protobuf.Empty) returns(AllBidResponse);
  rpc getAllSubDetails(SubByIdRequest) returns (AllSubResponse);
  rpc setBidSub(SubRequest) returns (BoolResponse);

}

message BoolResponse {
  bool success = 1;
}

message SubByIdRequest {
  int32 subReq = 1;
}

message SubRequest{
  int32 bidId = 1;
  string productName = 2;
  google.protobuf.Timestamp bidStartDate = 3;
  int32 userId = 4;
  string ownerName = 5;
  int32 ownerId = 6;
  string userName = 7;

}

message FilterParam {
  string key = 1;
  google.protobuf.Any value = 2;
}

message AllSubResponse {
  repeated SubResponse subResponse = 1;
}

message SubResponse {
  int32 subId = 1;
  google.protobuf.Timestamp subDate = 2;
  int32 bidId = 3;
  string productName = 4;
  google.protobuf.Timestamp bidStartDate = 5;
  int32 userId = 6;
  string ownerName = 7;
  int32 ownerId = 8;
  string userName = 9;
}

message UserByIdRequest {
  int32 userId = 1;
}

message UserResponse {
  int32 userId = 1;
  string userName = 2;
  string phNo = 3;
  int32 age = 4;
  string mail = 5;
  google.protobuf.Timestamp joinDate = 6;
}

message UserHistoryResponse {
  repeated HistoryResponse history = 1;
}

message BidHistoryResponse {
  repeated HistoryResponse history = 1;
}

message HistoryResponse {
  int32 histId = 1;
  google.protobuf.Timestamp histDate = 2;
  int32 bidId = 3;
  string productName = 4;
  double bidCost = 5;
  int32 userId = 6;
  string userName = 7;
  int32 ownerId = 8;
  string ownerName = 9;
}

message LoginRequest {
  string userName = 1;
  string password = 2;
}

message CreateUserRequest {
  string userName = 1;
  string phNo = 2;
  string password = 3;
  int32 age = 4;
  string mail = 5;
}


message BidByIdRequest {
  int32 bidId = 1;
}

message BidResponse {

  int32 bidId = 1;
  string productName = 2;
  string descp = 3;
  int32 ownerId = 4;
  string ownerName = 5;
  google.protobuf.Timestamp startDate = 6;
  google.protobuf.Timestamp endDate = 7;
  double basePrice = 8;
  double finalPrice = 9;
}

message AllBidResponse {
  repeated BidResponse bidResponse = 1;
}

message CreateBidRequest {

  string productName = 1;
  string descp = 2;
  int32 ownerId = 3;
  string ownerName = 4;
  google.protobuf.Timestamp startDate = 5;
  google.protobuf.Timestamp endDate = 6;
  double basePrice = 7;

}